--- a/.md
+++ b/.md
@@ -7,5 +7,17 @@ package.json 初始化
 
     npm install webpack@5.4.0 webpack-cli@4.2.0 -D
 
+> 手动生成 webpack.config.js 配置文件 
+>> 基础配置
+>> ```
+>> const path = require("path")
+>> module.exports = {
+>>     entry:  path.join(__dirname, "../src/index.js"),
+>>     output: {
+>>         filename: "js/bundle.js",
+>>         path: path.resolve(__dirname, "../dist"),
+>>         clean: true,
+>>     }
+>> }
 
 
