--- a/.md
+++ b/.md
@@ -20,4 +20,21 @@ package.json 初始化
 >>     }
 >> }
 
+### 安装项目依赖包
+
+* 管理输出 html 相关
+* 设置 HtmlWebpackPlugin
+```
+npm install html-webpack-plugin -D
+```
+webpack配置
+```
+const HtmlWebpackPlugin = require('html-webpack-plugin');
+plugins: [
+    new HtmlWebpackPlugin({
+        template: path.resolve(__dirname, "../public/index.html")
+    }),
+],
+
+```
 
