--- a/.md
+++ b/.md
@@ -5,13 +5,14 @@ package.json 初始化
 
 ### 安装 webpack（打包运行项目）
 
-    npm install webpack@5.4.0 webpack-cli@4.2.0 -D
+    npm install webpack@5.4.0 webpack-cli@4.9.0 -D
 
 > 手动生成 webpack.config.js 配置文件 
 >> 基础配置
 >> ```
 >> const path = require("path")
 >> module.exports = {
+>>     mode: "development",
 >>     entry:  path.join(__dirname, "../src/index.js"),
 >>     output: {
 >>         filename: "js/bundle.js",
@@ -25,7 +26,7 @@ package.json 初始化
 * 管理输出 html 相关
 * 设置 HtmlWebpackPlugin
 ```
-npm install html-webpack-plugin -D
+npm install html-webpack-plugin@5.2.0 -D
 ```
 webpack配置
 ```
@@ -37,4 +38,26 @@ plugins: [
 ],
 
 ```
+* 添加 webpack-dev-server 实时重新加载
+```
+npm install webpack-dev-server@4.12.0 -D
+```
+webpack配置
+```
+devServer: {
+    compress: true,
+    host: '127.0.0.1', // webpack-dev-server启动时要指定ip，不能直接通过localhost启动，不指定会报错
+    port: 3001, // 启动端口为 3001 的服务
+    open: false // 自动打开浏览器
+},
+// entry 多个入口文件 需添加，否则实时重新加载失败  
+// optimization: {
+//     runtimeChunk: 'single',
+// },
 
+```
+package.json配置
+```
+// 在 scripts 中添加
+"start": "webpack-dev-server --config config/webpack.config.js"
+```
