发布 npm，测试发布的npm

--- a/.md
+++ b/.md
@@ -38,6 +38,25 @@ plugins: [
 ],
 
 ```
+
+* 管理输出 css 相关
+* 设置 MiniCssExtractPlugin
+```
+npm i mini-css-extract-plugin -D
+```
+webpack配置
+```
+const MiniCssExtractPlugin = require("mini-css-extract-plugin");
+plugins: [
+    new MiniCssExtractPlugin({
+        filename: "main.min.css" // 提取后的css的文件名
+    }),
+],
+
+```
+
+
+
 * 添加 webpack-dev-server 实时重新加载
 ```
 npm install webpack-dev-server@4.12.0 -D
@@ -61,3 +80,82 @@ package.json配置
 // 在 scripts 中添加
 "start": "webpack-dev-server --config config/webpack.config.js"
 ```
+
+
+* 添加 css-loader、style-loader
+```
+npm install css-loader@6.7.3  style-loader@3.3.2 -D
+```
+webpack配置
+```
+module: {
+    rules: [{
+        test: /\.css$/i,
+        use: ["style-loader", "css-loader"]
+    }]
+}, 
+
+```
+
+
+### 发布 npm 
+
+> 配置 webpack.prod.config.js  
+>> ```
+>> const path = require("path")
+>> const HtmlWebpackPlugin = require('html-webpack-plugin');
+>> const MiniCssExtractPlugin = require("mini-css-extract-plugin");
+>> module.exports = {
+>>     mode: "production",
+>>     entry: path.join(__dirname, "../src/components/index.js"),
+>>     devtool: 'inline-source-map',
+>>     plugins: [
+>>         new HtmlWebpackPlugin({
+>>             template: path.resolve(__dirname, "../public/index.html"),
+>>         }),
+>>         new MiniCssExtractPlugin({
+>>             filename: "main.min.css" // 提取后的css的文件名
+>>         })
+>>     ],
+>>     module: {
+>>         rules: [{
+>>             test: /\.css$/i,
+>>             use: ["style-loader", "css-loader"]
+>>         }]
+>>     },
+>>     output: {
+>>         path: path.join(__dirname, "../lib/"),
+>>         filename: "index.js",
+>>         library: "index",
+>>         libraryTarget: 'umd', // 采用通用模块定义
+>>         libraryExport: 'default', // 兼容 ES6 的模块系统、CommonJS 和 AMD 模块规范
+>>         clean: true,
+>>     },
+>> }
+
+#### 测试发布的npm
+
+* 打包
+package.json配置
+```
+// 在 scripts 中添加
+"build": "webpack --config config/webpack.prod.config.js"
+```
+
+* 根目录下执行
+```
+npm run build
+npm link
+```
+* 在相应调用的目录下执行
+```
+cd src
+npm link webpack-npm-publishing-template@0.0.1
+```
+* src/index.js
+```
+// import xxx from "./components/index.js"
+import xxx from "webpack-npm-publishing-template"
+```
+
+
