--- a/.md
+++ b/.md
@@ -159,3 +159,28 @@ import xxx from "webpack-npm-publishing-template"
 ```
 
 
+### 安装vue依赖
+```
+npm i vue@next vue-loader@next -D
+```
+webpack配置
+```
+···
+const { VueLoaderPlugin } = require('vue-loader');
+const { DefinePlugin } = require("webpack");
+···
+module: {
+    plugins: [
+        new DefinePlugin({ __VUE_OPTIONS_API__: "true", __VUE_PROD_DEVTOOLS__: "false" }),
+        new VueLoaderPlugin(),
+    ],
+    rules: [
+            ···
+            ,{
+                test: /\.vue$/i,
+                use: "vue-loader"
+            }
+        ]
+}, 
+
+```
